--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,8 +4,8 @@ title: Projects
 permalink: /projects/
 weight: 1
 remote_projects: 
-  - git-for-wizards
-  - arduino-visitor-counter
+  - Node-Farm
+  - FMRS-Invoice-Generator
 ---
 
 {% include projects/index.html %}
