--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,6 +6,7 @@ weight: 1
 remote_projects: 
   - Node-Farm
   - FMRS-Invoice-Generator
+  - Mars-Weather-App
 ---
 
 {% include projects/index.html %}
